added collectibles controller, db connection, and routes
