# routes/index.js
@@ -6,5 +6,6 @@ routes.get('/', (req, res) => {
    res.sendFile(path.join(__dirname + '/../views/home.html'));
 });
 routes.use('/diecasts', require('./diecasts'));
+routes.use('/collectibles', require('./collectibles'));
 
 module.exports = routes;
